# chairlift-api

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  sample.env  start_server.sh
.github/workflows/: app.yml  deploy.yml  python-app.yml
app/: config.py  database.py  main.py  oauth2.py
app/controller/: __init__.py  gateway_channel.py  mail.py
app/controller/mail/: __init__.py  dependency.py  mail_client.py
app/controller/tcp_server/: __init__.py  schema.py  tcp_server.py
app/model/: __init__.py  api_key.py  api_keys_domain.py  firmware.py  group.py  group_invite_code.py  raw_data.py  role.py  sensor.py  sensor_key.py  subscription.py  user.py  user_group.py
app/router/: __init__.py  auth.py  user.py
app/schema/: __init__.py  email.py  reset_password.py  token.py  user_create.py  user_login.py  user_out.py  user_signup.py
app/templates/: email_template.html
migrations/: env.py
migrations/versions/: 0b8c87426215_.py  46fa1f4a3034_.py  4fa5690a7fde_user_group_relationships_many_to_many.py  60098b186c44_.py  96243071b08f_initial_migration.py  9f45c5a5e5dc_.py  a23939041c76_.py  d1605a74e84c_.py
tasks/: init_db.py
tests/: conftest.py  test.env  test_auth.py  test_data.json  test_user.py
tests/controller/: test_gateway_channel.py
tests/database/: test_db.py
tests/fixture/: __init__.py  client.py  db.py  gateway_channel.py  mail_client.py  test_data.py
tests/routes/: test_user.py
workflows/: python-app.yml
